--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
       <div class="card">
         <div class="count">
           <h1 class="counter" id="counter">0</h1>
-          <h3 id="show-Text">hello world</h3>
+          <h3 id="show-Text">Message Text</h3>
           <div class="count-btns">
             <button id="btn-count-incrace" class="Allbtn">+</button>
             <button id="btn-count-decrace" class="Allbtn">-</button> <br />
