--- a/index.html
+++ b/index.html
@@ -9,12 +9,13 @@
   <body>
     <div class="container">
       <div class="card">
+        <h2 class="heading">Tasbih Count</h2>
         <div class="count">
           <h1 class="counter" id="counter">0</h1>
-          <h3 id="show-Text">Message Text</h3>
+          <h3 id="show-Text">Your Message...</h3>
           <div class="count-btns">
-            <button id="btn-count-incrace" class="Allbtn">+</button>
-            <button id="btn-count-decrace" class="Allbtn">-</button> <br />
+            <button id="btn-count-decrace" class="Allbtn">-</button>
+            <button id="btn-count-incrace" class="Allbtn">+</button> <br />
             <button id="counter-Reset" class="Allbtn">Counter Reset</button>
           </div>
         </div>
