--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <body>
     <div class="container">
       <div class="card">
-        <h2 class="heading">Tasbih Count</h2>
+        <h2 class="heading">তাসবিহ কাউন্টার</h2>
         <div class="count">
           <h1 class="counter" id="counter">0</h1>
           <h3 id="show-Text">Your Message...</h3>
